047 ==> 207994 : Refresh meta data view on right side after exif import.
048 ==> 207911 : Crash after trying to re-open Image Editor containing an unsaved RAW image.
049 ==> 204080 : It crashed when it was closing.
050 ==> 198554 : Crash on making thumbnails, every time.
051 ==> 207330 : digiKam crashes if the editor has to open a new image while working on another.
052 ==> 

*********************************************************************************************************
digiKam 1.0.0-beta4 - Release date: 2009-08-30

NEW FEATURES:

General        : Add OpenStreetMap support in Geolocation panels.
General        : Showfoto, Editor, Preview, LightTable: Thumbbar is now dockable everywhere.
General        : Complete re-write of Color Management code. Add support of thumbs and preview CM.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 192534 : Rename a folder, then rename a photo and you get an error.
002 ==> 193522 : First run (with existing v3 database) fails, "No album library path...".
003 ==> 147885 : Update metadata doesn't work correctly for creation date.
004 ==> 196462 : IconView (Qt4 Model/view based): Navigation broken after delete.
005 ==> 195871 : Image tool tip does not show all tags if too long.
006 ==> 201560 : Crash at start up when scanning images.
007 ==> 197508 : Geo-localisation integration missing, but marble is installed.
008 ==> 201640 : Opportunity to compile digiKam without Nepomuk service.
009 ==> 201692 : No thumbnails in album view.
010 ==> 185098 : digiKam craches sometimes on raw files selection.
011 ==> 201624 : Showfoto => color-management => input-profile => search => crash.
012 ==> 151712 : Adjust Exif orientation tag - wrong permission interpretation.
013 ==> 171983 : Enable display of Openstreetmap maps in the Map Widget.
014 ==> 155097 : Performance problems with recursive view and filtering.